# jiji

./: .gitignore  README.md  presentation.md  presentation.py  pyproject.toml  requirements.txt  slide8-script.md
frontend/: README.md  api.js  app.js  cache.js  crypto.js  howto.md  index.html  serve.py  styles.css
jiji/: __main__.py  node.py
jiji/core/: block.py  chain.py  config.py  crypto.py  merkle.py  serialization.py  state.py  transaction.py  validation.py
jiji/mining/: mempool.py  miner.py
jiji/net/: discovery.py  peer.py  protocol.py  scoring.py  server.py
jiji/rpc/: server.py
jiji/storage/: __init__.py  store.py
tests/: test_block.py  test_chain.py  test_crypto.py  test_incremental_state_root.py  test_mempool.py  test_merkle.py  test_miner.py  test_node.py  test_protocol.py  test_rate_limit.py  test_reorg.py  test_rpc.py  test_scoring.py  test_self_endorsement.py  test_serialization.py  test_state.py  test_store.py  test_transaction.py  test_validation.py
